--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="calculator">
         <div id="screen">
-            <p id="num">0</p>
+            <p id="num"></p>
         </div>
         <div id="row1" class="row">
             <div class="special" id="clear">
@@ -60,7 +60,7 @@
             <div class="num" id="two">
                 <p>2</p>
             </div>
-            <div class="num" id="six">
+            <div class="num" id="three">
                 <p>3</p>
             </div>
             <div class="operator" id="add">
@@ -75,7 +75,7 @@
                 <div class="num" id="decimal">
                     <p>.</p>
                 </div>
-                <div class="operator" id="add">
+                <div class="operator" id="equal">
                     <p>=</p>
                 </div>
             </div>
